New Waveshare ESP32-S3-Touch-LCD-4B third party board, 86 box form. (#1199)
Co-authored-by: Xiaoxia <terrence@tenclass.com>

--- a/main/CMakeLists.txt
+++ b/main/CMakeLists.txt
@@ -229,6 +229,11 @@ elseif(CONFIG_BOARD_TYPE_ESP32S3_Touch_AMOLED_2_06)
     set(BUILTIN_TEXT_FONT font_puhui_basic_30_4)
     set(BUILTIN_ICON_FONT font_awesome_30_4)
     set(DEFAULT_EMOJI_COLLECTION twemoji_64)
+elseif(CONFIG_BOARD_TYPE_ESP32S3_Touch_LCD_4B)
+    set(BOARD_TYPE "waveshare-s3-touch-lcd-4b")
+    set(BUILTIN_TEXT_FONT font_puhui_basic_30_4)
+    set(BUILTIN_ICON_FONT font_awesome_30_4)
+    set(DEFAULT_EMOJI_COLLECTION twemoji_64)
 elseif(CONFIG_BOARD_TYPE_ESP32S3_Touch_AMOLED_1_75)
     set(BOARD_TYPE "waveshare-s3-touch-amoled-1.75")
     set(BUILTIN_TEXT_FONT font_puhui_basic_30_4)
