--- a/main/CMakeLists.txt
+++ b/main/CMakeLists.txt
@@ -264,6 +264,11 @@ elseif(CONFIG_BOARD_TYPE_ESP32S3_Touch_LCD_3_5B)
     set(BUILTIN_TEXT_FONT font_puhui_basic_16_4)
     set(BUILTIN_ICON_FONT font_awesome_16_4)
     set(DEFAULT_EMOJI_COLLECTION twemoji_32)
+elseif(CONFIG_BOARD_TYPE_ESP32S3_Touch_LCD_3_49)
+    set(BOARD_TYPE "waveshare-s3-touch-lcd-3.49")
+    set(LVGL_TEXT_FONT font_puhui_basic_30_4)
+    set(LVGL_ICON_FONT font_awesome_30_4)
+    set(DEFAULT_EMOJI_COLLECTION twemoji_64)
 elseif(CONFIG_BOARD_TYPE_ESP32C6_LCD_1_69)
     set(BOARD_TYPE "waveshare-c6-lcd-1.69")
     set(BUILTIN_TEXT_FONT font_puhui_basic_20_4)
