--- a/main/idf_component.yml
+++ b/main/idf_component.yml
@@ -4,10 +4,13 @@ dependencies:
   espressif/esp_lcd_ili9341: ==1.2.0
   espressif/esp_lcd_gc9a01: ==2.0.1
   espressif/esp_lcd_st77916: ^1.0.1
-  espressif/esp_lcd_st7701: "^1.1.*"
   espressif/esp_lcd_axs15231b: ^1.0.0
+  espressif/esp_lcd_st7701:
+    version: ^1.1.4
+    rules:
+    - if: target in [esp32s3, esp32p4]
   espressif/esp_lcd_st7796:
-    version: 1.3.4
+    version: 1.3.5
     rules:
     - if: target not in [esp32c3]
   espressif/esp_lcd_spd2010: ==1.0.2
