feat(board): 新增fogseek-esp32s3-edge-lcd1.5 和 fogseek-esp32s3-edge-lcd1.8 开发板支持
- 添加 fogseek-esp32s3-edge-lcd1.5 和 fogseek-esp32s3-edge-lcd1.8 开发板定义
- 更新 CMakeLists.txt 以包含新开发板配置选项
- 更新 Kconfig.projbuild 添加新开发板选择菜单
- 为新开发板创建独立配置文件和外设驱动源码
- 添加详细README文档说明硬件规格和快速入门指南

--- a/main/CMakeLists.txt
+++ b/main/CMakeLists.txt
@@ -222,6 +222,10 @@ elseif(CONFIG_BOARD_TYPE_FOGSEEK_ESP32S3_AUDIO)
     set(BOARD_TYPE "fogseek-esp32s3-audio")
 elseif(CONFIG_BOARD_TYPE_FOGSEEK_ESP32S3_EDGE)
     set(BOARD_TYPE "fogseek-esp32s3-edge")
+elseif(CONFIG_BOARD_TYPE_FOGSEEK_ESP32S3_EDGE_LCD1_5)
+    set(BOARD_TYPE "fogseek-esp32s3-edge-lcd1.5")
+elseif(CONFIG_BOARD_TYPE_FOGSEEK_ESP32S3_EDGE_LCD1_8)
+    set(BOARD_TYPE "fogseek-esp32s3-edge-lcd1.8")
 elseif(CONFIG_BOARD_TYPE_FOGSEEK_MOODLIGHT)
     set(BOARD_TYPE "fogseek-moodlight")
 endif()
