--- a/main/idf_component.yml
+++ b/main/idf_component.yml
@@ -12,7 +12,7 @@ dependencies:
   espressif/esp_lcd_st7796:
     version: 1.3.5
     rules:
-    - if: target not in [esp32c3]
+    - if: target not in [esp32c3, esp32c6]
   espressif/esp_lcd_spd2010: ==1.0.2
   espressif/esp_io_expander_tca9554: ==2.0.0
   espressif/esp_lcd_panel_io_additions: ^1.0.1
