--- a/main/idf_component.yml
+++ b/main/idf_component.yml
@@ -26,7 +26,10 @@ dependencies:
   espressif/esp-sr: ~2.1.5
   espressif/button: ~4.1.3
   espressif/knob: ^1.0.0
-  espressif/esp_video: ~1.2.0
+  espressif/esp_video:
+    version: '^1.2.0'
+    rules:
+    - if: target not in [esp32]
   espressif/esp_lcd_touch_ft5x06: ~1.0.7
   espressif/esp_lcd_touch_gt911: ^1
   espressif/esp_lcd_touch_gt1151: ^1
