--- a/main/boards/esp-sparkbot/config.json
+++ b/main/boards/esp-sparkbot/config.json
@@ -6,7 +6,8 @@
             "sdkconfig_append": [
                 "CONFIG_CAMERA_OV2640=y",
                 "CONFIG_CAMERA_OV2640_AUTO_DETECT_DVP_INTERFACE_SENSOR=y",
-                "CONFIG_CAMERA_OV2640_DVP_RGB565_240X240_25FPS=y"
+                "CONFIG_CAMERA_OV2640_DVP_RGB565_240X240_25FPS=y",
+                "CONFIG_CAMERA_SENSOR_SWAP_PIXEL_BYTE_ORDER=y"
             ]
         }
     ]
