--- a/main/CMakeLists.txt
+++ b/main/CMakeLists.txt
@@ -499,17 +499,19 @@ elseif(CONFIG_BOARD_TYPE_YUNLIAO_S3)
     set(BUILTIN_TEXT_FONT font_puhui_basic_20_4)
     set(BUILTIN_ICON_FONT font_awesome_20_4)
     set(DEFAULT_EMOJI_COLLECTION twemoji_64)
-elseif(CONFIG_BOARD_TYPE_ENGLISH_TEACHER)
-    set(BOARD_TYPE "english-teacher")
+ elseif(CONFIG_BOARD_TYPE_English_Teacher)
+    set(BOARD_TYPE "EnglishTeacher")
     set(BUILTIN_TEXT_FONT font_puhui_basic_14_1)
     set(BUILTIN_ICON_FONT font_awesome_14_1)
-    set(DEFAULT_EMOJI_COLLECTION twemoji_64)
 endif()
 
 file(GLOB BOARD_SOURCES
     ${CMAKE_CURRENT_SOURCE_DIR}/boards/${BOARD_TYPE}/*.cc
     ${CMAKE_CURRENT_SOURCE_DIR}/boards/${BOARD_TYPE}/*.c
 )
+message(STATUS "BOARD_TYPE=${BOARD_TYPE}")
+message(STATUS "Board sources: ${BOARD_SOURCES}")
+
 list(APPEND SOURCES ${BOARD_SOURCES})
 
 # Select audio processor according to Kconfig
