--- a/main/idf_component.yml
+++ b/main/idf_component.yml
@@ -47,7 +47,10 @@ dependencies:
   espressif2022/esp_emote_gfx: ^1.1.2
   espressif/adc_mic: ^0.2.1
   espressif/esp_mmap_assets: '>=1.2'
-  txp666/otto-emoji-gif-component: ^1.0.3
+  txp666/otto-emoji-gif-component:
+    version: ^1.0.3
+    rules:
+    - if: target in [esp32s3]
   espressif/adc_battery_estimation: ^0.2.0
   espressif/esp_new_jpeg: ^0.6.1
 
