增加epd_render和初始化代码

--- a/main/CMakeLists.txt
+++ b/main/CMakeLists.txt
@@ -42,6 +42,7 @@ set(SOURCES "audio/audio_codec.cc"
 list(APPEND SOURCES "ui/display_manager.cc"
                      "input/button_manager.cc"
                      "audio/audio_manager.cc"
+                     "ui/epd_renderer.cc"
                      "services/word_practice.cc"
                      "services/free_conversation.cc"
                      "services/scene_conversation.cc"
