--- a/main/idf_component.yml
+++ b/main/idf_component.yml
@@ -31,6 +31,10 @@ dependencies:
     version: '==1.3.1' # for compatibility. update version may need to modify this project code.
     rules:
     - if: target not in [esp32]
+  espressif/esp_image_effects:
+    version: ^1.0.1
+    rules:
+    - if: target not in [esp32]
   espressif/esp_lcd_touch_ft5x06: ~1.0.7
   espressif/esp_lcd_touch_gt911: ^1
   espressif/esp_lcd_touch_gt1151: ^1
