--- a/main/boards/wireless-tag-wtp4c5mp07s/config.json
+++ b/main/boards/wireless-tag-wtp4c5mp07s/config.json
@@ -9,8 +9,7 @@
                 "CONFIG_SPIRAM_TRY_ALLOCATE_WIFI_LWIP=n",
                 "CONFIG_WIFI_RMT_STATIC_RX_BUFFER_NUM=10",
                 "CONFIG_WIFI_RMT_DYNAMIC_RX_BUFFER_NUM=24",
-                "CONFIG_WIFI_RMT_STATIC_TX_BUFFER_NUM=10",
-                "CONFIG_USE_DEVICE_AEC=y"
+                "CONFIG_WIFI_RMT_STATIC_TX_BUFFER_NUM=10"
             ]
         }
     ]
