将太极派新款和旧款分离

--- a/main/CMakeLists.txt
+++ b/main/CMakeLists.txt
@@ -383,6 +383,11 @@ elseif(CONFIG_BOARD_TYPE_ESP32S3_Taiji_Pi)
     set(BUILTIN_TEXT_FONT font_puhui_basic_20_4)
     set(BUILTIN_ICON_FONT font_awesome_20_4)
     set(DEFAULT_EMOJI_COLLECTION twemoji_64)
+elseif(CONFIG_BOARD_TYPE_ESP32S3_Taiji_Pi_NEW)
+    set(BOARD_TYPE "taiji-pi-s3-new")
+    set(BUILTIN_TEXT_FONT font_puhui_basic_20_4)
+    set(BUILTIN_ICON_FONT font_awesome_20_4)
+    set(DEFAULT_EMOJI_COLLECTION twemoji_64)
 elseif(CONFIG_BOARD_TYPE_XINGZHI_Cube_0_85TFT_WIFI)
     set(BOARD_TYPE "xingzhi-cube-0.85tft-wifi")
     set(BUILTIN_TEXT_FONT font_puhui_basic_16_4)
