--- a/main/idf_component.yml
+++ b/main/idf_component.yml
@@ -26,7 +26,10 @@ dependencies:
   espressif/esp-sr: ~2.1.5
   espressif/button: ~4.1.3
   espressif/knob: ^1.0.0
-  espressif/esp32-camera: ~2.1.2
+  espressif/esp_video:
+    version: '==1.2.0' # for compatibility. update version may need to modify this project code.
+    rules:
+    - if: target not in [esp32]
   espressif/esp_lcd_touch_ft5x06: ~1.0.7
   espressif/esp_lcd_touch_gt911: ^1
   espressif/esp_lcd_touch_gt1151: ^1
@@ -36,7 +39,7 @@ dependencies:
   esp_lvgl_port: ~2.6.0
   espressif/esp_io_expander_tca95xx_16bit: ^2.0.0
   espressif2022/image_player: ==1.1.0~1
-  espressif2022/esp_emote_gfx: ^1.1.0
+  espressif2022/esp_emote_gfx: ^1.1.2
   espressif/adc_mic: ^0.2.1
   espressif/esp_mmap_assets: '>=1.2'
   txp666/otto-emoji-gif-component:
@@ -45,6 +48,7 @@ dependencies:
     - if: target not in [esp32c5]
   
   espressif/adc_battery_estimation: ^0.2.0
+  espressif/esp_new_jpeg: ^0.6.1
 
   # SenseCAP Watcher Board
   wvirgil123/sscma_client:
@@ -89,4 +93,4 @@ dependencies:
 
   ## Required IDF version
   idf:
-    version: '>=5.4.0'
+    version: '>=5.5.0'
