--- a/main/boards/taiji-pi-s3/config.json
+++ b/main/boards/taiji-pi-s3/config.json
@@ -9,7 +9,7 @@
             ]
         },
         {
-            "name": "taiji-pi-s3-new",
+            "name": "taiji-pi-s3-pdm",
             "sdkconfig_append": [
                 "CONFIG_SPIRAM_TRY_ALLOCATE_WIFI_LWIP=y",
                 "CONFIG_TAIJIPAI_I2S_TYPE_PDM=y"
