修改摄像头配置

--- a/main/CMakeLists.txt
+++ b/main/CMakeLists.txt
@@ -317,6 +317,11 @@ elseif(CONFIG_BOARD_TYPE_LILYGO_T_CAMERAPLUS_S3_V1_0_V1_1)
     set(BUILTIN_TEXT_FONT font_puhui_basic_20_4)
     set(BUILTIN_ICON_FONT font_awesome_20_4)
     set(DEFAULT_EMOJI_COLLECTION twemoji_64)
+elseif(CONFIG_BOARD_TYPE_LILYGO_T_CAMERAPLUS_S3_V1_2)
+    set(BOARD_TYPE "lilygo-t-cameraplus-s3")
+    set(BUILTIN_TEXT_FONT font_puhui_basic_20_4)
+    set(BUILTIN_ICON_FONT font_awesome_20_4)
+    set(DEFAULT_EMOJI_COLLECTION twemoji_64)
 elseif(CONFIG_BOARD_TYPE_LILYGO_T_DISPLAY_S3_PRO_MVSRLORA)
     set(BOARD_TYPE "lilygo-t-display-s3-pro-mvsrlora")
     set(BUILTIN_TEXT_FONT font_puhui_basic_20_4)
