--- a/main/boards/waveshare-s3-audio-board/config.json
+++ b/main/boards/waveshare-s3-audio-board/config.json
@@ -2,8 +2,29 @@
     "target": "esp32s3",
     "builds": [
         {
-            "name": "waveshare-s3-audio-board",
-            "sdkconfig_append": []
+            "name": "waveshare-s3-audio-board-ov5640",
+            "sdkconfig_append": [
+                "CONFIG_USE_WECHAT_MESSAGE_STYLE=y",
+                "CONFIG_XIAOZHI_ENABLE_CAMERA_ENDIANNESS_SWAP=y",
+                "CONFIG_CAMERA_OV2640=y",
+                "CONFIG_CAMERA_OV2640_AUTO_DETECT_DVP_INTERFACE_SENSOR=y",
+                "CONFIG_CAMERA_OV2640_DVP_YUV422_640X480_6FPS=y",
+                "CONFIG_CAMERA_OV2640_DVP_IF_FORMAT_INDEX_DEFAULT=1",
+                "CONFIG_CAMERA_OV5640=y",
+                "CONFIG_CAMERA_OV5640_AUTO_DETECT_DVP_INTERFACE_SENSOR=y",
+                "CONFIG_CAMERA_OV5640_DVP_YUV422_800X600_10FPS=y",
+                "CONFIG_CAMERA_OV5640_DVP_IF_FORMAT_INDEX_DEFAULT=0"
+            ]
+        },
+        {
+            "name": "waveshare-s3-audio-board-ov2640",
+            "sdkconfig_append": [
+                "CONFIG_USE_WECHAT_MESSAGE_STYLE=y",
+                "CONFIG_CAMERA_OV2640=y",
+                "CONFIG_CAMERA_OV2640_AUTO_DETECT_DVP_INTERFACE_SENSOR=y",
+                "CONFIG_CAMERA_OV2640_DVP_YUV422_640X480_6FPS=y",
+                "CONFIG_CAMERA_OV2640_DVP_IF_FORMAT_INDEX_DEFAULT=1"
+            ]
         }
     ]
 }
