修改开发板名字

--- a/main/CMakeLists.txt
+++ b/main/CMakeLists.txt
@@ -34,16 +34,14 @@ list(APPEND SOURCES ${BOARD_COMMON_SOURCES})
 list(APPEND INCLUDE_DIRS ${CMAKE_CURRENT_SOURCE_DIR}/boards/common)
 
 # 根据 BOARD_TYPE 配置添加对应的板级文件
-if(CONFIG_BOARD_TYPE_NULLLAB_AI_Vox_V3)
-    set(BOARD_TYPE "nulllab-ai-vox-v3")
+if(CONFIG_BOARD_TYPE_NULLLAB_AI_VOX3)
+    set(BOARD_TYPE "nulllab-AI-VOX3")
 elseif(CONFIG_BOARD_TYPE_NULLLAB_AI_Vox)
     set(BOARD_TYPE "nulllab-ai-vox")
 elseif(CONFIG_BOARD_TYPE_NULLLAB_AI_Vox_Emoji)
     set(BOARD_TYPE "nulllab-ai-vox-emoji")
 elseif(CONFIG_BOARD_TYPE_NULLLAB_AI_Vox_Eyes)
     set(BOARD_TYPE "nulllab-ai-vox-eyes")
-elseif(CONFIG_BOARD_TYPE_NULLLAB_AI_Vox_Otto)
-    set(BOARD_TYPE "nulllab-ai-vox-otto")
 elseif(CONFIG_BOARD_TYPE_BREAD_COMPACT_WIFI)
     set(BOARD_TYPE "bread-compact-wifi")
 elseif(CONFIG_BOARD_TYPE_BREAD_COMPACT_ML307)
@@ -169,7 +167,7 @@ elseif(CONFIG_BOARD_TYPE_ATK_DNESP32S3_BOX0)
 elseif(CONFIG_BOARD_TYPE_ATK_DNESP32S3_BOX2_WIFI)
     set(BOARD_TYPE "atk-dnesp32s3-box2-wifi")
 elseif(CONFIG_BOARD_TYPE_ATK_DNESP32S3_BOX2_4G)
-    set(BOARD_TYPE "atk-dnesp32s3-box2-4g")   
+    set(BOARD_TYPE "atk-dnesp32s3-box2-4g")
 elseif(CONFIG_BOARD_TYPE_ATK_DNESP32S3M_WIFI)
     set(BOARD_TYPE "atk-dnesp32s3m-wifi")
 elseif(CONFIG_BOARD_TYPE_ATK_DNESP32S3M_4G)
@@ -225,9 +223,9 @@ elseif(CONFIG_BOARD_TYPE_BREAD_COMPACT_WIFI_CAM)
 elseif(CONFIG_BOARD_TYPE_JIUCHUAN)
     set(BOARD_TYPE "jiuchuan-s3")
 elseif(CONFIG_BOARD_TYPE_LABPLUS_MPYTHON_V3)
-    set(BOARD_TYPE "labplus-mpython-v3") 
+    set(BOARD_TYPE "labplus-mpython-v3")
 elseif(CONFIG_BOARD_TYPE_LABPLUS_LEDONG_V2)
-    set(BOARD_TYPE "labplus-ledong-v2") 
+    set(BOARD_TYPE "labplus-ledong-v2")
 elseif(CONFIG_BOARD_TYPE_SURFER_C3_1_14TFT)
     set(BOARD_TYPE "surfer-c3-1.14tft")
 endif()
