--- a/main/boards/nulllab-ai-vox3/config.json
+++ b/main/boards/nulllab-ai-vox3/config.json
@@ -2,7 +2,7 @@
   "target": "esp32s3",
   "builds": [
     {
-      "name": "nulllab-ai-vox-v3",
+      "name": "nulllab-AI-VOX3",
       "sdkconfig_append": [
         "CONFIG_CUSTOM_SSID_PREFIX=\"AI-VOX\"",
         "CONFIG_USE_DEVICE_AEC=n"
