Update the default wake-up word configuration for the ESP32-P4 chip

--- a/main/boards/waveshare-p4-wifi6-touch-lcd-7b/config.json
+++ b/main/boards/waveshare-p4-wifi6-touch-lcd-7b/config.json
@@ -5,6 +5,7 @@
             "name": "waveshare-p4-wifi6-touch-lcd-7b",
             "sdkconfig_append": [
                 "CONFIG_USE_WECHAT_MESSAGE_STYLE=n",
+                "CONFIG_USE_AFE_WAKE_WORD=y",
                 "CONFIG_USE_DEVICE_AEC=y"
             ]
         }
