--- a/main/boards/waveshare-p4-nano/config.json
+++ b/main/boards/waveshare-p4-nano/config.json
@@ -5,7 +5,8 @@
             "name": "waveshare-p4-nano-10.1-a",
             "sdkconfig_append": [
                 "CONFIG_USE_WECHAT_MESSAGE_STYLE=y",
-                "CONFIG_LCD_TYPE_800_1280_10_1_INCH_A=y"
+                "CONFIG_LCD_TYPE_800_1280_10_1_INCH_A=y",
+                "CONFIG_USE_AFE_WAKE_WORD=y"
             ]
         }
     ]
