--- a/main/boards/waveshare-p4-wifi6-touch-lcd-xc/config.json
+++ b/main/boards/waveshare-p4-wifi6-touch-lcd-xc/config.json
@@ -5,6 +5,7 @@
             "name": "waveshare-p4-wifi6-touch-lcd-xc-3.4c",
             "sdkconfig_append": [
                 "CONFIG_USE_WECHAT_MESSAGE_STYLE=n",
+                "CONFIG_USE_AFE_WAKE_WORD=y",
                 "CONFIG_USE_DEVICE_AEC=y",
                 "CONFIG_LCD_TYPE_800_800_3_4_INCH=y"
             ]
@@ -13,6 +14,7 @@
             "name": "waveshare-p4-wifi6-touch-lcd-xc-4c",
             "sdkconfig_append": [
                 "CONFIG_USE_WECHAT_MESSAGE_STYLE=n",
+                "CONFIG_USE_AFE_WAKE_WORD=y",
                 "CONFIG_USE_DEVICE_AEC=y",
                 "CONFIG_LCD_TYPE_720_720_4_INCH=y"
             ]
