New Waveshare ESP32-S3-Touch-LCD-1.83 third-party board is available

--- a/main/CMakeLists.txt
+++ b/main/CMakeLists.txt
@@ -238,6 +238,11 @@ elseif(CONFIG_BOARD_TYPE_ESP32S3_Touch_AMOLED_1_75)
     set(BUILTIN_TEXT_FONT font_puhui_basic_30_4)
     set(BUILTIN_ICON_FONT font_awesome_30_4)
     set(DEFAULT_EMOJI_COLLECTION twemoji_64)
+elseif(CONFIG_BOARD_TYPE_ESP32S3_Touch_LCD_1_83)
+    set(BOARD_TYPE "waveshare-s3-touch-lcd-1.83")
+    set(BUILTIN_TEXT_FONT font_puhui_basic_16_4)
+    set(BUILTIN_ICON_FONT font_awesome_16_4)
+    set(DEFAULT_EMOJI_COLLECTION twemoji_64)
 elseif(CONFIG_BOARD_TYPE_ESP32S3_Touch_LCD_1_85C)
     set(BOARD_TYPE "esp32-s3-touch-lcd-1.85c")
     set(BUILTIN_TEXT_FONT font_puhui_basic_16_4)
