feat(product): 新增fogseek-bubblepal产品支持8路RGB全彩LED
- 创建bubblepal产品专属硬件配置文件

- 实现8路RGB LED驱动控制逻辑

- 添加LED效果管理器支持多种灯光模式

- 集成到现有电源管理框架

- 创建产品专属文档和使用示例

--- a/main/CMakeLists.txt
+++ b/main/CMakeLists.txt
@@ -226,8 +226,8 @@ elseif(CONFIG_BOARD_TYPE_FOGSEEK_ESP32S3_EDGE_LCD1_5)
     set(BOARD_TYPE "fogseek-esp32s3-edge-lcd1.5")
 elseif(CONFIG_BOARD_TYPE_FOGSEEK_ESP32S3_EDGE_LCD1_8)
     set(BOARD_TYPE "fogseek-esp32s3-edge-lcd1.8")
-elseif(CONFIG_BOARD_TYPE_FOGSEEK_MOODLIGHT)
-    set(BOARD_TYPE "fogseek-moodlight")
+elseif(CONFIG_BOARD_TYPE_FOGSEEK_BUBBLEPAL)
+    set(BOARD_TYPE "fogseek-bubblepal")
 endif()
 file(GLOB BOARD_SOURCES
     ${CMAKE_CURRENT_SOURCE_DIR}/boards/${BOARD_TYPE}/*.cc
