--- a/main/CMakeLists.txt
+++ b/main/CMakeLists.txt
@@ -526,6 +526,8 @@ elseif(CONFIG_BOARD_TYPE_WIRELESS_TAG_WTP4C5MP07S)
     set(BUILTIN_TEXT_FONT font_puhui_basic_30_4)
     set(BUILTIN_ICON_FONT font_awesome_30_4)
     set(DEFAULT_EMOJI_COLLECTION twemoji_64)
+elseif(CONFIG_BOARD_TYPE_LC_S3_WIFI_1_54TFT)
+    set(BOARD_TYPE "lc-s3-wifi-1.54tft")
 endif()
 
 file(GLOB BOARD_SOURCES
