--- a/main/idf_component.yml
+++ b/main/idf_component.yml
@@ -91,6 +91,9 @@ dependencies:
     rules:
     - if: target in [esp32c3]
 
+  chmorgan/esp-libhelix-mp3:
+    version: "*"
+
   llgok/cpp_bus_driver:
     version: 1.1.0
     rules:
