--- a/main/idf_component.yml
+++ b/main/idf_component.yml
@@ -27,6 +27,7 @@ dependencies:
   espressif/esp-sr: ~2.1.5
   espressif/button: ~4.1.3
   espressif/knob: ^1.0.0
+  espressif/esp32-camera: ~2.1.2
   espressif/esp_video:
     version: '==1.3.1' # for compatibility. update version may need to modify this project code.
     rules:
