--- a/main/boards/waveshare-c6-touch-amoled-1.32/config.json
+++ b/main/boards/waveshare-c6-touch-amoled-1.32/config.json
@@ -2,7 +2,7 @@
     "target": "esp32c6",
     "builds": [
         {
-            "name": "esp32-c6-touch-amoled-1.32",
+            "name": "waveshare-c6-touch-amoled-1.32",
             "sdkconfig_append": [
                 "CONFIG_USE_ESP_WAKE_WORD=y"
             ]
