重构电源管理，支持双麦

--- a/main/boards/jiuchuan-s3/config.json
+++ b/main/boards/jiuchuan-s3/config.json
@@ -3,7 +3,9 @@
     "builds": [
         {
             "name": "jiuchuan-s3",
-            "sdkconfig_append": []
+            "sdkconfig_append": [
+                "CONFIG_USE_DEVICE_AEC=y"
+            ]
         }
     ]
 }
