--- a/main/boards/waveshare-s3-touch-amoled-1.32/config.json
+++ b/main/boards/waveshare-s3-touch-amoled-1.32/config.json
@@ -2,7 +2,7 @@
     "target": "esp32s3",
     "builds": [
         {
-            "name": "esp32-s3-touch-amoled-1.32",
+            "name": "waveshare-s3-touch-amoled-1.32",
             "sdkconfig_append": [
                 "CONFIG_ESPTOOLPY_FLASHSIZE=8MB",
                 "CONFIG_PARTITION_TABLE_CUSTOM_FILENAME=partitions/v2/8m.csv"
