refactor(fogseek): 重构雾岸科技产品代码架构并添加bubblepal全彩LED产品
- 对fogseek所有产品代码进行重构，提升代码复用性和可维护性
- 提取公共实现到main/boards/fogseek_common目录，统一管理通用功能
- 重构板级文件代码结构，优化代码组织和模块化设计
- 新增fogseek-bubblepal产品支持，实现8路RGB全彩LED控制功能
- 改进LED控制器，支持冷暖色温灯控制和更丰富的灯光效果
- 优化电源管理和设备状态处理逻辑

--- a/main/boards/fogseek-esp32s3-edge/config.json
+++ b/main/boards/fogseek-esp32s3-edge/config.json
@@ -2,7 +2,7 @@
     "target": "esp32s3",
     "builds": [
         {
-            "name": "fogseek-esp32s3-edge-lcd1.8",
+            "name": "fogseek-esp32s3-edge",
             "sdkconfig_append": [
                 "CONFIG_ESPTOOLPY_FLASHSIZE_8MB=y",
                 "CONFIG_PARTITION_TABLE_CUSTOM_FILENAME=\"partitions/v1/8m.csv\"",
