--- a/main/CMakeLists.txt
+++ b/main/CMakeLists.txt
@@ -33,6 +33,11 @@ file(GLOB BOARD_COMMON_SOURCES ${CMAKE_CURRENT_SOURCE_DIR}/boards/common/*.cc)
 list(APPEND SOURCES ${BOARD_COMMON_SOURCES})
 list(APPEND INCLUDE_DIRS ${CMAKE_CURRENT_SOURCE_DIR}/boards/common)
 
+# 添加fogseek公共文件
+file(GLOB FOGSEEK_COMMON_SOURCES ${CMAKE_CURRENT_SOURCE_DIR}/boards/fogseek_common/*.cc)
+list(APPEND SOURCES ${FOGSEEK_COMMON_SOURCES})
+list(APPEND INCLUDE_DIRS ${CMAKE_CURRENT_SOURCE_DIR}/boards/fogseek_common)
+
 # 根据 BOARD_TYPE 配置添加对应的板级文件
 if(CONFIG_BOARD_TYPE_BREAD_COMPACT_WIFI)
     set(BOARD_TYPE "bread-compact-wifi")
