feat(core): 升级至小智2.0并优化ST77916屏幕代码

--- a/main/CMakeLists.txt
+++ b/main/CMakeLists.txt
@@ -44,6 +44,12 @@ file(GLOB BOARD_COMMON_SOURCES ${CMAKE_CURRENT_SOURCE_DIR}/boards/common/*.cc)
 list(APPEND SOURCES ${BOARD_COMMON_SOURCES})
 list(APPEND INCLUDE_DIRS ${CMAKE_CURRENT_SOURCE_DIR}/boards/common)
 
+# Add fogseek common files
+file(GLOB FOGSEEK_COMMON_SOURCES ${CMAKE_CURRENT_SOURCE_DIR}/boards/fogseek_common/*.cc)
+list(APPEND SOURCES ${FOGSEEK_COMMON_SOURCES})
+list(APPEND INCLUDE_DIRS ${CMAKE_CURRENT_SOURCE_DIR}/boards/fogseek_common)
+
+
 idf_build_get_property(build_components BUILD_COMPONENTS)
 # Function to find component dynamically by pattern
 function(find_component_by_pattern PATTERN COMPONENT_VAR PATH_VAR)
@@ -538,14 +544,29 @@ elseif(CONFIG_BOARD_TYPE_AIPI_LITE)
     set(DEFAULT_EMOJI_COLLECTION twemoji_32)
 elseif(CONFIG_BOARD_TYPE_FOGSEEK_ESP32S3_AUDIO)
     set(BOARD_TYPE "fogseek-esp32s3-audio")
+    set(BUILTIN_TEXT_FONT font_puhui_basic_16_4)
+    set(BUILTIN_ICON_FONT font_awesome_16_4)
+    set(DEFAULT_EMOJI_COLLECTION twemoji_32)
 elseif(CONFIG_BOARD_TYPE_FOGSEEK_ESP32S3_EDGE)
     set(BOARD_TYPE "fogseek-esp32s3-edge")
+    set(BUILTIN_TEXT_FONT font_puhui_basic_16_4)
+    set(BUILTIN_ICON_FONT font_awesome_16_4)
+    set(DEFAULT_EMOJI_COLLECTION twemoji_32)
 elseif(CONFIG_BOARD_TYPE_FOGSEEK_ESP32S3_EDGE_LCD1_5)
     set(BOARD_TYPE "fogseek-esp32s3-edge-lcd1.5")
+    set(BUILTIN_TEXT_FONT font_puhui_basic_16_4)
+    set(BUILTIN_ICON_FONT font_awesome_16_4)
+    set(DEFAULT_EMOJI_COLLECTION twemoji_32)
 elseif(CONFIG_BOARD_TYPE_FOGSEEK_ESP32S3_EDGE_LCD1_8)
     set(BOARD_TYPE "fogseek-esp32s3-edge-lcd1.8")
+    set(BUILTIN_TEXT_FONT font_puhui_20_4)
+    set(BUILTIN_ICON_FONT font_awesome_20_4)
+    set(DEFAULT_EMOJI_COLLECTION twemoji_64)
 elseif(CONFIG_BOARD_TYPE_FOGSEEK_BUBBLEPAL)
     set(BOARD_TYPE "fogseek-bubblepal")
+    set(BUILTIN_TEXT_FONT font_puhui_basic_16_4)
+    set(BUILTIN_ICON_FONT font_awesome_16_4)
+    set(DEFAULT_EMOJI_COLLECTION twemoji_32)
 endif()
 
 file(GLOB BOARD_SOURCES
