--- a/main/boards/atk-dnesp32s3/config.json
+++ b/main/boards/atk-dnesp32s3/config.json
@@ -3,7 +3,9 @@
     "builds": [
         {
             "name": "atk-dnesp32s3",
-            "sdkconfig_append": []
+            "sdkconfig_append": [
+                "CONFIG_USE_WECHAT_MESSAGE_STYLE=y"
+            ]
         }
     ]
 }
