--- a/main/idf_component.yml
+++ b/main/idf_component.yml
@@ -35,12 +35,12 @@ dependencies:
   lvgl/lvgl: ~9.3.0
   esp_lvgl_port: ~2.6.0
   espressif/esp_io_expander_tca95xx_16bit: ^2.0.0
-  espressif2022/image_player: ==1.1.0~1
+  espressif2022/image_player: '*'
   espressif2022/esp_emote_gfx: ^1.1.0
   espressif/adc_mic: ^0.2.1
   espressif/esp_mmap_assets: '>=1.2'
   txp666/otto-emoji-gif-component:
-    version: 1.0.2
+    version: '*'
     rules:
     - if: target not in [esp32c5]
   
