--- a/main/idf_component.yml
+++ b/main/idf_component.yml
@@ -95,6 +95,10 @@ dependencies:
     version: 1.1.0
     rules:
     - if: target in [esp32p4]
+  
+  chmorgan/esp-libhelix-mp3:
+    version: "*"
+
 
   ## Required IDF version
   idf:
