--- a/main/idf_component.yml
+++ b/main/idf_component.yml
@@ -5,7 +5,7 @@ dependencies:
   espressif/esp_lcd_gc9a01: ==2.0.1
   espressif/esp_lcd_st77916: ^1.0.1
   espressif/esp_lcd_axs15231b: ^1.0.0
- 
+
   espressif/esp_lcd_st7701:
     version: ^1.1.4
     rules:
@@ -28,7 +28,7 @@ dependencies:
   espressif/button: ~4.1.3
   espressif/knob: ^1.0.0
   espressif/esp_video:
-    version: '==1.3.1' # for compatibility. update version may need to modify this project code.
+    version: ==1.3.1   # for compatibility. update version may need to modify this project code.
     rules:
     - if: target not in [esp32]
   espressif/esp_image_effects:
@@ -67,7 +67,7 @@ dependencies:
     rules:
     - if: target in [esp32p4]
   espressif/esp32_p4_function_ev_board:
-    version: "^5.0.3"
+    version: ^5.0.3
     rules:
     - if: target in [esp32p4]
   espressif/esp_lcd_ili9881c:
@@ -99,3 +99,4 @@ dependencies:
   ## Required IDF version
   idf:
     version: '>=5.4.0'
+  espressif/esp_lcd_touch_st7123: ^1.0.0
