--- a/main/CMakeLists.txt
+++ b/main/CMakeLists.txt
@@ -547,31 +547,47 @@ elseif(CONFIG_BOARD_TYPE_AIPI_LITE)
     set(BUILTIN_TEXT_FONT font_puhui_basic_14_1)
     set(BUILTIN_ICON_FONT font_awesome_14_1)
     set(DEFAULT_EMOJI_COLLECTION twemoji_32)
-elseif(CONFIG_BOARD_TYPE_FOGSEEK_ESP32S3_AUDIO)
-    set(BOARD_TYPE "fogseek-esp32s3-audio")
+elseif(CONFIG_BOARD_TYPE_FOGSEEK_AUDIO)
+    set(BOARD_TYPE "fogseek-audio")
     set(BUILTIN_TEXT_FONT font_puhui_basic_16_4)
     set(BUILTIN_ICON_FONT font_awesome_16_4)
     set(DEFAULT_EMOJI_COLLECTION twemoji_32)
-elseif(CONFIG_BOARD_TYPE_FOGSEEK_ESP32S3_EDGE)
-    set(BOARD_TYPE "fogseek-esp32s3-edge")
+elseif(CONFIG_BOARD_TYPE_FOGSEEK_AUDIO_MOODLIGHT)
+    set(BOARD_TYPE "fogseek-audio-moodlight")
     set(BUILTIN_TEXT_FONT font_puhui_basic_16_4)
     set(BUILTIN_ICON_FONT font_awesome_16_4)
     set(DEFAULT_EMOJI_COLLECTION twemoji_32)
-elseif(CONFIG_BOARD_TYPE_FOGSEEK_ESP32S3_EDGE_LCD1_5)
-    set(BOARD_TYPE "fogseek-esp32s3-edge-lcd1.5")
+elseif(CONFIG_BOARD_TYPE_FOGSEEK_AUDIO_XIAOYA)
+    set(BOARD_TYPE "fogseek-audio-xiaoya")
     set(BUILTIN_TEXT_FONT font_puhui_basic_16_4)
     set(BUILTIN_ICON_FONT font_awesome_16_4)
     set(DEFAULT_EMOJI_COLLECTION twemoji_32)
-elseif(CONFIG_BOARD_TYPE_FOGSEEK_ESP32S3_EDGE_LCD1_8)
-    set(BOARD_TYPE "fogseek-esp32s3-edge-lcd1.8")
+elseif(CONFIG_BOARD_TYPE_FOGSEEK_EDGE)
+    set(BOARD_TYPE "fogseek-edge")
+    set(BUILTIN_TEXT_FONT font_puhui_basic_16_4)
+    set(BUILTIN_ICON_FONT font_awesome_16_4)
+    set(DEFAULT_EMOJI_COLLECTION twemoji_32)
+elseif(CONFIG_BOARD_TYPE_FOGSEEK_EDGE_BUBBLEPAL)
+    set(BOARD_TYPE "fogseek-edge-bubblepal")
+    set(BUILTIN_TEXT_FONT font_puhui_basic_16_4)
+    set(BUILTIN_ICON_FONT font_awesome_16_4)
+    set(DEFAULT_EMOJI_COLLECTION twemoji_32)
+elseif(CONFIG_BOARD_TYPE_FOGSEEK_EDGE_ES8389)
+    set(BOARD_TYPE "fogseek-edge-es8389")
+    set(BUILTIN_TEXT_FONT font_puhui_basic_16_4)
+    set(BUILTIN_ICON_FONT font_awesome_16_4)
+    set(DEFAULT_EMOJI_COLLECTION twemoji_32)
+elseif(CONFIG_BOARD_TYPE_FOGSEEK_EDGE_LCD1_5)
+    set(BOARD_TYPE "fogseek-edge-lcd1.5")
+    set(BUILTIN_TEXT_FONT font_puhui_basic_16_4)
+    set(BUILTIN_ICON_FONT font_awesome_16_4)
+    set(DEFAULT_EMOJI_COLLECTION twemoji_32)
+elseif(CONFIG_BOARD_TYPE_FOGSEEK_EDGE_LCD1_8)
+    set(BOARD_TYPE "fogseek-edge-lcd1.8")
     set(BUILTIN_TEXT_FONT font_puhui_20_4)
     set(BUILTIN_ICON_FONT font_awesome_20_4)
     set(DEFAULT_EMOJI_COLLECTION twemoji_64)
-elseif(CONFIG_BOARD_TYPE_FOGSEEK_BUBBLEPAL)
-    set(BOARD_TYPE "fogseek-bubblepal")
-    set(BUILTIN_TEXT_FONT font_puhui_basic_16_4)
-    set(BUILTIN_ICON_FONT font_awesome_16_4)
-    set(DEFAULT_EMOJI_COLLECTION twemoji_32)
+
 endif()
 
 file(GLOB BOARD_SOURCES
