feat: Add AAC decoder support for VOV radio streams
- Add ESP Audio Simple Decoder dependency for AAC/AAC+ streams
- Implement dual decoder architecture (MP3 for music, AAC for radio)
- Enhanced format detection to identify AAC/ADTS streams
- VOV streams (audio/aacp format) now supported with AAC decoder
- Automatic format detection and decoder selection
- Restore VOV stations to radio list with proper AAC support

Based on reference implementation from esp32_acc_audio_reference.cc

--- a/main/idf_component.yml
+++ b/main/idf_component.yml
@@ -51,6 +51,7 @@ dependencies:
   txp666/otto-emoji-gif-component: ^1.0.3
   espressif/adc_battery_estimation: ^0.2.0
   espressif/esp_new_jpeg: ^0.6.1
+  espressif/esp_audio_codec: ^2.3.0
 
   # SenseCAP Watcher Board
   wvirgil123/sscma_client:
