--- a/main/idf_component.yml
+++ b/main/idf_component.yml
@@ -24,7 +24,7 @@ dependencies:
   78/xiaozhi-fonts: ~1.5.4
   espressif/led_strip: ~3.0.1
   espressif/esp_codec_dev: ~1.5
-  espressif/esp-sr: ~2.2.0
+  espressif/esp-sr: ~2.2.1
   espressif/button: ~4.1.3
   espressif/knob: ^1.0.0
   espressif/esp32-camera: ~2.1.2
@@ -52,6 +52,7 @@ dependencies:
   espressif/adc_battery_estimation: ^0.2.0
   espressif/esp_new_jpeg: ^0.6.1
   espressif/esp_audio_codec: ^2.3.0
+  espressif/qrcode: ^0.1.0~2
 
   # SenseCAP Watcher Board
   wvirgil123/sscma_client:
