--- a/main/boards/otto-robot/config.json
+++ b/main/boards/otto-robot/config.json
@@ -3,7 +3,9 @@
     "builds": [
         {
             "name": "otto-robot",
-            "sdkconfig_append": []
+            "sdkconfig_append": [
+                "CONFIG_HTTPD_WS_SUPPORT=y"
+            ]
         }
     ]
 }
