--- a/main/CMakeLists.txt
+++ b/main/CMakeLists.txt
@@ -551,7 +551,7 @@ elseif(CONFIG_BOARD_TYPE_AIPI_LITE)
     set(BUILTIN_ICON_FONT font_awesome_14_1)
     set(DEFAULT_EMOJI_COLLECTION twemoji_32)
 elseif(CONFIG_BOARD_TYPE_HU_087)
-    set(BOARD_TYPE "esp32-s3-hu-087")
+    set(BOARD_TYPE "hu-087")
     set(BUILTIN_TEXT_FONT font_puhui_basic_14_1)
     set(BUILTIN_ICON_FONT font_awesome_14_1)
 endif()
