--- a/main/boards/hu-087/config.json
+++ b/main/boards/hu-087/config.json
@@ -2,7 +2,7 @@
     "target": "esp32s3",
     "builds": [
         {
-            "name": "esp32s3-hu087",
+            "name": "hu087",
             "sdkconfig_append": []
         }
     ]
