feat: add esp-spot c5

--- a/main/CMakeLists.txt
+++ b/main/CMakeLists.txt
@@ -200,7 +200,9 @@ elseif(CONFIG_BOARD_TYPE_ESP_SPARKBOT)
     set(BUILTIN_ICON_FONT font_awesome_20_4)
     set(DEFAULT_EMOJI_COLLECTION twemoji_64)
 elseif(CONFIG_BOARD_TYPE_ESP_SPOT_S3)
-    set(BOARD_TYPE "esp-spot-s3")
+    set(BOARD_TYPE "esp-spot")
+elseif(CONFIG_BOARD_TYPE_ESP_SPOT_C5)
+    set(BOARD_TYPE "esp-spot")
 elseif(CONFIG_BOARD_TYPE_ESP_HI)
     set(BOARD_TYPE "esp-hi")
     # Set ESP_HI emoji directory for DEFAULT_ASSETS_EXTRA_FILES
