feat(audio): 优化充电灯光显示逻辑
chore(xiaoya): 完善开发板基础代码

--- a/main/boards/fogseek-audio-xiaoya/config.json
+++ b/main/boards/fogseek-audio-xiaoya/config.json
@@ -4,7 +4,8 @@
         {
             "name": "fogseek-audio-xiaoya",
             "sdkconfig_append": [
-                "CONFIG_SR_WN_WN9_XIAOYAXIAOYA_TTS2=y"
+                "CONFIG_SR_WN_WN9_XIAOYAXIAOYA_TTS2=y",
+                "CONFIG_OTA_URL=\"https://api.aiyainfo.com:8002/xiaoya/ota/\""
             ]
         }
     ]
