--- a/main/idf_component.yml
+++ b/main/idf_component.yml
@@ -18,7 +18,9 @@ dependencies:
   espressif/esp_io_expander_tca9554: ==2.0.0
   espressif/esp_lcd_panel_io_additions: ^1.0.1
   78/esp_lcd_nv3023: ~1.0.0
-  78/esp-wifi-connect: ~2.6.1
+  TienHuyIoT_esp-wifi-connect:
+    git: https://github.com/TienHuyIoT/esp-wifi-connect.git
+    version: "main"
   78/esp-opus-encoder: ~2.4.1
   78/esp-ml307: ~3.3.7
   78/xiaozhi-fonts: ~1.5.4
