Creation new partition for otto-robot

--- a/main/boards/otto-robot/config.json
+++ b/main/boards/otto-robot/config.json
@@ -3,7 +3,10 @@
     "builds": [
         {
             "name": "otto-robot",
-            "sdkconfig_append": []
+            "sdkconfig_append": [
+                "CONFIG_ESPTOOLPY_FLASHSIZE_16MB=y",
+                "CONFIG_PARTITION_TABLE_CUSTOM_FILENAME=\"partitions/v2/16m_otto_robot.csv\""
+            ]
         }
     ]
 }
