--- a/main/CMakeLists.txt
+++ b/main/CMakeLists.txt
@@ -34,6 +34,7 @@ set(SOURCES "audio/audio_codec.cc"
             "settings.cc"
             "device_state_event.cc"
             "assets.cc"
+            "era_iot_client.cc"
             "main.cc"
             )
 
