feat(wifi): 添加WiFi连接组件并集成到主项目
新增WiFi连接功能组件，包括AP模式配置、DNS服务器、SSID管理和站点连接功能。集成到主项目CMake配置中，移除外部依赖改为本地实现。添加相关文档和资源文件，支持多语言配置界面。调整音频编解码音量映射范围至30-80，修复PWM LED默认亮度设置。新增充电状态指示功能和本地音频文件转换文档。

修复旋转编码器消抖问题，优化关机按键长按触发逻辑。更新配置文件，调整GPIO定义和电池电压参数。添加调试记录和功能说明文档，完善硬件接口定义和音频处理流程。

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -9,6 +9,8 @@ set(PROJECT_VER "2.0.4")
 # Add this line to disable the specific warning
 add_compile_options(-Wno-missing-field-initializers)
 
+set(EXTRA_COMPONENT_DIRS "${CMAKE_SOURCE_DIR}/main/boards/ai-martube-esp32s3/wifi_connect")
+
 include($ENV{IDF_PATH}/tools/cmake/project.cmake)
 project(xiaozhi)
 
