--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -10,5 +10,4 @@ set(PROJECT_VER "2.0.5.05")
 add_compile_options(-Wno-missing-field-initializers)
 
 include($ENV{IDF_PATH}/tools/cmake/project.cmake)
-project(xiaozhi)
-
+project(xiaozhi_vn)
