feat(device): 新增双击配网模式并优化ES8389音频驱动支持双麦克风
- 交互优化: 新增双击物理按键进入Wi-Fi配网模式，提升用户体验

- 硬件升级: 扩展ES8389音频驱动代码，完整支持双麦克风阵列输入

--- a/main/boards/fogseek-audio/config.json
+++ b/main/boards/fogseek-audio/config.json
@@ -4,7 +4,8 @@
         {
             "name": "fogseek-audio",
             "sdkconfig_append": [
-                "CONFIG_SR_WN_WN9_HAIXIAOWU_TTS=y"
+                "CONFIG_SR_WN_WN9_HAIXIAOWU_TTS=y",
+                "CONFIG_USE_AFE_WAKE_WORD=y"
             ]
         }
     ]
