Fix selection lcd il9341 type

--- a/main/CMakeLists.txt
+++ b/main/CMakeLists.txt
@@ -69,6 +69,11 @@ if(CONFIG_BOARD_TYPE_ES3N28P_LCD_2_8)
     set(BUILTIN_TEXT_FONT font_puhui_basic_20_4)
     set(BUILTIN_ICON_FONT font_awesome_20_4)
     set(DEFAULT_EMOJI_COLLECTION twemoji_32)
+elseif(CONFIG_BOARD_TYPE_XIAOZHI_AI_IOT_VIETNAM_LCD_SDCARD)
+    set(BOARD_TYPE "xiaozhi-ai-iot-vietnam-lcd-sdcard")
+    set(BUILTIN_TEXT_FONT font_puhui_basic_16_4)
+    set(BUILTIN_ICON_FONT font_awesome_16_4)
+    set(DEFAULT_EMOJI_COLLECTION twemoji_32)
 elseif(CONFIG_BOARD_TYPE_BREAD_COMPACT_WIFI)
     set(BOARD_TYPE "bread-compact-wifi")
     set(BUILTIN_TEXT_FONT font_puhui_basic_14_1)
