--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -6,6 +6,18 @@ cmake_minimum_required(VERSION 3.16)
 
 set(PROJECT_VER "2.0.4")
 
+# Fix for Windows: Command line too long error
+# Use response files for compilation to avoid hitting Windows command line length limit
+if(WIN32)
+    set(CMAKE_C_USE_RESPONSE_FILE_FOR_INCLUDES ON)
+    set(CMAKE_CXX_USE_RESPONSE_FILE_FOR_INCLUDES ON)
+    set(CMAKE_C_USE_RESPONSE_FILE_FOR_OBJECTS ON)
+    set(CMAKE_CXX_USE_RESPONSE_FILE_FOR_OBJECTS ON)
+    set(CMAKE_C_USE_RESPONSE_FILE_FOR_LIBRARIES ON)
+    set(CMAKE_CXX_USE_RESPONSE_FILE_FOR_LIBRARIES ON)
+    set(CMAKE_NINJA_FORCE_RESPONSE_FILE ON)
+endif()
+
 # Add this line to disable the specific warning
 add_compile_options(-Wno-missing-field-initializers)
 
