add sd_card template

--- a/main/CMakeLists.txt
+++ b/main/CMakeLists.txt
@@ -9,6 +9,7 @@ set(SOURCES "audio/audio_codec.cc"
             "audio/codecs/es8389_audio_codec.cc"
             "audio/codecs/dummy_audio_codec.cc"
             "audio/processors/audio_debugger.cc"
+            "sd_card/sd_card.cc"
             "sd_card/sdmmc.cc"
             "led/single_led.cc"
             "led/circular_strip.cc"
