feat: echoear 添加电池监控功能及电池状态图标显示
添加BatteryMonitor类实现电池状态监控，包括电量、电压、电流和温度等
在EmoteDisplay中添加电池图标显示功能，支持不同电量等级和充电状态
更新EchoEar支持包（BQ27220），集成电池监控和低功耗定时器功能

--- a/main/idf_component.yml
+++ b/main/idf_component.yml
@@ -47,6 +47,7 @@ dependencies:
   espressif2022/esp_emote_gfx: ^1.1.2
   espressif/adc_mic: ^0.2.1
   espressif/esp_mmap_assets: '>=1.2'
+  espressif/bq27220: ^0.1.1
   txp666/otto-emoji-gif-component:
     version: ^1.0.3
     rules:
