feat(wifi_connect): 添加高级配置页面支持OTA URL设置
fix(pwm_led): 修正默认亮度值为100
fix(config): 交换编码器A/B GPIO引脚定义
fix(ai_martube): 修正灯光模式亮度百分比和电源控制逻辑
fix(ai_martube): 完善音频播放后关闭功放的逻辑

--- a/main/boards/ai-martube-esp32s3/wifi_connect/CMakeLists.txt
+++ b/main/boards/ai-martube-esp32s3/wifi_connect/CMakeLists.txt
@@ -9,6 +9,7 @@ idf_component_register(
     EMBED_TXTFILES
         "assets/wifi_configuration.html"
         "assets/wifi_configuration_done.html"
+        "assets/wifi_configuration_advanced.html"
     REQUIRES
     	"esp_timer"
         "esp_http_server"
