--- a/main/boards/waveshare-s3-epaper-1.54/config.json
+++ b/main/boards/waveshare-s3-epaper-1.54/config.json
@@ -4,7 +4,7 @@
         {
             "name": "waveshare-s3-epaper-1.54",
             "sdkconfig_append": [
-                "CONFIG_PARTITION_TABLE_CUSTOM_FILENAME=partitions/v2/8m.csv",
+                "CONFIG_PARTITION_TABLE_CUSTOM_FILENAME=\"partitions/v2/8m.csv\"",
                 "CONFIG_ESPTOOLPY_FLASHSIZE=8MB"
             ]
         }
