--- a/main/boards/xiaozhi-ai-iot-vietnam-es3n28p-lcd-2.8/config.json
+++ b/main/boards/xiaozhi-ai-iot-vietnam-es3n28p-lcd-2.8/config.json
@@ -2,9 +2,10 @@
     "target": "esp32s3",
     "builds": [
         {
-            "name": "xingzhi-cube-1.54tft-wifi",
+            "name": "xiaozhi-ai-iot-vietnam-es3n28p-lcd-2.8",
             "sdkconfig_append": [
-                "CONFIG_SD_CARD_SPI_INTERFACE=n",
+                "ES3N28P_LCD_ILI9341_240X320=y",
+                "CONFIG_SD_CARD_MMC_INTERFACE=y",
                 "CONFIG_FATFS_LFN_HEAP=y",
                 "CONFIG_FATFS_API_ENCODING_UTF_8=y",
                 "CONFIG_FATFS_FS_LOCK=5"
