--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -8,6 +8,15 @@ set(PROJECT_VER "2.0.4")
 
 # Add this line to disable the specific warning
 add_compile_options(-Wno-missing-field-initializers)
+if(WIN32)
+    set(CMAKE_C_USE_RESPONSE_FILE_FOR_INCLUDES ON)
+    set(CMAKE_CXX_USE_RESPONSE_FILE_FOR_INCLUDES ON)
+    set(CMAKE_C_USE_RESPONSE_FILE_FOR_OBJECTS ON)
+    set(CMAKE_CXX_USE_RESPONSE_FILE_FOR_OBJECTS ON)
+    set(CMAKE_C_USE_RESPONSE_FILE_FOR_LIBRARIES ON)
+    set(CMAKE_CXX_USE_RESPONSE_FILE_FOR_LIBRARIES ON)
+    set(CMAKE_NINJA_FORCE_RESPONSE_FILE ON)
+endif()
 
 include($ENV{IDF_PATH}/tools/cmake/project.cmake)
 project(xiaozhi)
