--- a/main/idf_component.yml
+++ b/main/idf_component.yml
@@ -5,15 +5,15 @@ dependencies:
   espressif/esp_lcd_gc9a01: ==2.0.1
   espressif/esp_lcd_st77916: ^1.0.1
   espressif/esp_lcd_axs15231b: ^1.0.0
- 
+
   espressif/esp_lcd_st7701:
     version: ^1.1.4
     rules:
-    - if: target in [esp32s3, esp32p4]
+      - if: target in [esp32s3, esp32p4]
   espressif/esp_lcd_st7796:
     version: 1.3.5
     rules:
-    - if: target in [esp32, esp32s2, esp32s3, esp32p4]
+      - if: target in [esp32, esp32s2, esp32s3, esp32p4]
   espressif/esp_lcd_spd2010: ==1.0.2
   espressif/esp_io_expander_tca9554: ==2.0.0
   espressif/esp_lcd_panel_io_additions: ^1.0.1
@@ -24,17 +24,18 @@ dependencies:
   78/xiaozhi-fonts: ~1.5.4
   espressif/led_strip: ~3.0.1
   espressif/esp_codec_dev: ~1.5
-  espressif/esp-sr: ~2.2.0
+  espressif/esp-sr: ~2.2.1
   espressif/button: ~4.1.3
   espressif/knob: ^1.0.0
+  espressif/esp32-camera: ~2.1.2
   espressif/esp_video:
-    version: '==1.2.0' # for compatibility. update version may need to modify this project code.
+    version: "==1.2.0" # for compatibility. update version may need to modify this project code.
     rules:
-    - if: target not in [esp32]
+      - if: target not in [esp32]
   espressif/esp_image_effects:
     version: ^1.0.1
     rules:
-    - if: target not in [esp32]
+      - if: target not in [esp32]
   espressif/esp_lcd_touch_ft5x06: ~1.0.7
   espressif/esp_lcd_touch_gt911: ^1
   espressif/esp_lcd_touch_gt1151: ^1
@@ -46,60 +47,62 @@ dependencies:
   espressif2022/image_player: ^1.1.1
   espressif2022/esp_emote_gfx: ^1.1.2
   espressif/adc_mic: ^0.2.1
-  espressif/esp_mmap_assets: '>=1.2'
+  espressif/esp_mmap_assets: ">=1.2"
   txp666/otto-emoji-gif-component: ^1.0.3
   espressif/adc_battery_estimation: ^0.2.0
   espressif/esp_new_jpeg: ^0.6.1
+
+  espressif/esp_audio_codec: ^2.3.0
+  espressif/qrcode: ^0.1.0~2
 
   # SenseCAP Watcher Board
   wvirgil123/sscma_client:
     version: 1.0.2
     rules:
-    - if: target in [esp32s3]
+      - if: target in [esp32s3]
 
   tny-robotics/sh1106-esp-idf: ^1.0.0
   waveshare/esp_lcd_jd9365_10_1:
-    version: '*'
+    version: "*"
     rules:
-    - if: target in [esp32p4]
+      - if: target in [esp32p4]
   waveshare/esp_lcd_st7703:
-    version: '*'
+    version: "*"
     rules:
-    - if: target in [esp32p4]
+      - if: target in [esp32p4]
   espressif/esp32_p4_function_ev_board:
     version: "^5.0.3"
     rules:
-    - if: target in [esp32p4]
+      - if: target in [esp32p4]
   espressif/esp_lcd_ili9881c:
     version: ^1.0.1
     rules:
-    - if: target in [esp32p4]
+      - if: target in [esp32p4]
   espressif/esp_lcd_ek79007:
     version: ^1.0.3
     rules:
-    - if: target in [esp32p4]
+      - if: target in [esp32p4]
   espressif/esp_hosted:
     version: 2.0.17
     rules:
-    - if: target in [esp32h2, esp32p4]
+      - if: target in [esp32h2, esp32p4]
   espressif/esp_wifi_remote:
-    version: '*'
+    version: "*"
     rules:
-    - if: target in [esp32p4]
+      - if: target in [esp32p4]
   espfriends/servo_dog_ctrl:
     version: ^0.1.8
     rules:
-    - if: target in [esp32c3]
+      - if: target in [esp32c3]
 
   llgok/cpp_bus_driver:
     version: 1.1.0
     rules:
-    - if: target in [esp32p4]
-  
+      - if: target in [esp32p4]
+
   chmorgan/esp-libhelix-mp3:
     version: "*"
 
-
   ## Required IDF version
   idf:
-    version: '>=5.4.0'
+    version: ">=5.4.0"
