Add support for both hardware versions of waveshare-s3-epaper-1.54

--- a/main/CMakeLists.txt
+++ b/main/CMakeLists.txt
@@ -272,7 +272,11 @@ elseif(CONFIG_BOARD_TYPE_WAVESHARE_S3_TOUCH_LCD_3_5B)
     set(BUILTIN_TEXT_FONT font_puhui_basic_16_4)
     set(BUILTIN_ICON_FONT font_awesome_16_4)
     set(DEFAULT_EMOJI_COLLECTION twemoji_32)
-elseif(CONFIG_BOARD_TYPE_WAVESHARE_S3_ePaper_1_54)
+elseif(CONFIG_BOARD_TYPE_WAVESHARE_S3_ePaper_1_54_v1)
+    set(BOARD_TYPE "waveshare-s3-epaper-1.54")
+    set(BUILTIN_TEXT_FONT font_puhui_basic_20_4)
+    set(BUILTIN_ICON_FONT font_awesome_20_4)
+elseif(CONFIG_BOARD_TYPE_WAVESHARE_S3_ePaper_1_54_v2)
     set(BOARD_TYPE "waveshare-s3-epaper-1.54")
     set(BUILTIN_TEXT_FONT font_puhui_basic_20_4)
     set(BUILTIN_ICON_FONT font_awesome_20_4)
