add selection ERA Smart Home on menuconfig

--- a/main/CMakeLists.txt
+++ b/main/CMakeLists.txt
@@ -35,9 +35,12 @@ set(SOURCES "audio/audio_codec.cc"
             "settings.cc"
             "device_state_event.cc"
             "assets.cc"
-            "era_iot_client.cc"
             "main.cc"
             )
+
+if(CONFIG_USE_ERA_SMART_HOME)
+    list(APPEND SOURCES "era_iot_client.cc")
+endif()
 
 set(INCLUDE_DIRS "." "display" "display/lvgl_display" "display/lvgl_display/jpg" "audio" "protocols")
 
