feat:添加绿荫搭子小智盒子支持

--- a/main/CMakeLists.txt
+++ b/main/CMakeLists.txt
@@ -121,6 +121,11 @@ elseif(CONFIG_BOARD_TYPE_KEVIN_YUYING_313LCD)
     set(BUILTIN_TEXT_FONT font_puhui_basic_30_4)
     set(BUILTIN_ICON_FONT font_awesome_30_4)
     set(DEFAULT_EMOJI_COLLECTION twemoji_64)
+elseif(CONFIG_BOARD_TYPE_VERDURE_ASSISTANT)
+    set(BOARD_TYPE "verdure-assistant")
+    set(BUILTIN_TEXT_FONT font_puhui_basic_20_4)
+    set(BUILTIN_ICON_FONT font_awesome_20_4)
+    set(DEFAULT_EMOJI_COLLECTION twemoji_64)
 elseif(CONFIG_BOARD_TYPE_LICHUANG_DEV_S3)
     set(BOARD_TYPE "lichuang-dev")
     set(BUILTIN_TEXT_FONT font_puhui_basic_20_4)
