feat(device): 增加MCP控制8路RGB灯带与WiFi名称自定义功能
- 设备驱动: 新增MCP函数，支持独立控制8个全彩RGB灯带的颜色、亮度和模式

- 网络配置: 增加WiFi名称自定义功能，支持在配网阶段设置个性化SSID

- 协议扩展: 为RGB灯带注册新的MCP工具，确保小智AI能正确识别和指令解析

- 兼容性: 新增功能与现有设备管理及配网流程保持兼容

--- a/main/boards/fogseek-audio/config.json
+++ b/main/boards/fogseek-audio/config.json
@@ -3,9 +3,7 @@
     "builds": [
         {
             "name": "fogseek-audio",
-            "sdkconfig_append": [
-                "CONFIG_SR_WN_WN9_HAIXIAOWU_TTS=y"
-            ]
+            "sdkconfig_append": []
         }
     ]
 }
