--- a/main/boards/ai-martube-esp32s3/config.json
+++ b/main/boards/ai-martube-esp32s3/config.json
@@ -3,7 +3,9 @@
     "builds": [
         {
             "name": "ai-martube-esp32s3",
-            "sdkconfig_append": []
+            "sdkconfig_append": [
+                "CONFIG_USE_DEVICE_AEC=y"
+            ]
         }
     ]
 }
